src/golden/cards/templates/bindings/errors/test.golden/fieldneedssomething.fl
	card FieldNeedsSomethingNext
		template label
			show-message
			styleme
				| => 'something'
				
				
	card FieldNeedsSomethingEnd
		template label
			show-message
